# agent-warden

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  LICENSE  Makefile  README.md  agentwarden.example.yaml  agentwarden.yaml  docker-compose.yml  go.mod  go.sum
.claude/: launch.json
.claude-journal/: PM.md  README.md  competitive-analysis.md  future-todos.md  learnings.md  tracker.csv
.claude-journal/sessions/: 2025-02-24.md  2025-02-25.md
.github/workflows/: ci.yml  docs.yml  release.yml
.loop/: run.sh  state.md  system-prompt.md
cmd/agentwarden/: main.go
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: DataTable.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/lib/: api.ts  format.ts  types.ts
dashboard/src/pages/: AgentDetail.tsx  Agents.tsx  Approvals.tsx  Costs.tsx  EvolutionHistory.tsx  LiveFeed.tsx  Overview.tsx  Policies.tsx  PolicyEditor.tsx  (+4 more)
docs/: Dockerfile  api-reference.md  architecture.md  configuration.md  evolution.md  index.md  nginx.conf  openclaw.md  package-lock.json  package.json  policies.md  quickstart.md  sdk-python.md  sdk-typescript.md
docs/.vitepress/: config.ts
internal/adapter/: adapter.go
internal/alert/: manager.go  manager_test.go  slack.go  webhook.go
internal/api/: handlers.go  server.go  websocket.go
internal/approval/: queue.go  queue_test.go
internal/auth/: token.go  token_test.go
internal/capability/: scope.go  scope_test.go
internal/config/: config.go  loader.go  loader_test.go
internal/cost/: pricing.go  pricing_test.go  tokens.go  tokens_test.go  tracker.go
internal/dashboard/: embed.go
internal/detection/: anomaly.go  drift.go  engine.go  loop.go  loop_test.go  playbook.go  spiral.go  spiral_test.go  velocity.go  velocity_test.go
internal/evolution/: analyzer.go  analyzer_test.go  engine.go  llm.go  proposer.go  rollback.go  rollback_test.go  shadow.go  versions.go  versions_test.go
internal/killswitch/: killswitch.go  killswitch_test.go
internal/mdloader/: loader.go  loader_test.go  templates.go  validator.go  validator_test.go  watcher.go
internal/messaging/: interceptor.go  interceptor_test.go
internal/policy/: ai_judge.go  budget.go  budget_test.go  cel.go  cel_test.go  engine.go  loader.go  ratelimit.go
internal/proxy/: adapters.go  classifier.go  classifier_test.go  interceptor.go  proxy.go  router.go  router_test.go  streaming.go
internal/safety/: invariants.go  invariants_test.go
internal/sanitize/: scanner.go  scanner_test.go
internal/server/: e2e_integration_test.go  grpc.go  grpc_test.go  http_events.go  http_events_test.go
internal/session/: manager.go  manager_test.go
internal/skill/: scanner.go  scanner_test.go
internal/spawn/: governor.go  governor_test.go
internal/trace/: hashchain.go  hashchain_test.go  models.go  sqlite.go  store.go
policies/openclaw/: email-safe.yaml  safety-basic.yaml  safety-strict.yaml
sdks/python/: README.md  pyproject.toml
sdks/python/agentwarden/: __init__.py  client.py  decorators.py  exceptions.py  session.py
sdks/python/agentwarden/integrations/: __init__.py  crewai.py  langchain.py  openai_agents.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
test/: RUN_SUPPORT_BOT_TEST.md
test/config/: agentwarden.yaml
(+39 files in other folders)
