[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwarden"
version = "0.1.0"
description = "Python SDK for AgentWarden - runtime governance proxy for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentWarden" },
]
keywords = ["ai", "agents", "governance", "proxy", "guardrails", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.1"]
openai-agents = ["openai>=1.0"]
all = [
    "openai>=1.0",
    "langchain-core>=0.1",
    "crewai>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/agentwarden/agentwarden"
Documentation = "https://github.com/agentwarden/agentwarden/tree/main/sdks/python"
Repository = "https://github.com/agentwarden/agentwarden"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwarden"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
